# market-stress-vs-macro

./: README.md  pyproject.toml
data/interim/: macro_daily.parquet  market_daily.parquet
data/processed/: csi.parquet  stress_indicators.parquet
notebooks/: 00_sanity_checks.ipynb  20_build_stress_signals.ipynb  30_build_csi.ipynb  40_macro_vs_csi.ipynb
reports/: EXECUTIVESUMMARY.md
scripts/: build_csi.py  build_interim_data.py  build_stress_indicators.py
src/: config.py
src/analysis/: conditioning.py  event_definitions.py  latency.py
src/features/: preprocess.py  stress_correlation.py  stress_dispersion.py  stress_tails.py  stress_utils.py  stress_volatility.py  stress_volume.py
src/ingest/: fetch_macro.py  fetch_market.py
src/market_stress_vs_macro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/regimes/: stress_index.py
src/utils/: io.py
tests/: test_day2_pipeline.py  test_stress_correlation.py  test_stress_dispersion.py  test_stress_tails.py  test_stress_volatility.py  test_stress_volume.py
