[project]
name = "market-stress-vs-macro"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "yfinance>=0.2.40",
  "pandas_datareader>=0.10.0",
  "pyarrow>=14.0",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]